tests/ui/parser/doc-before-attr.rs
fn main() {}

/// hi
#[derive(Debug)] //~ERROR expected item after attributes

// ferrocene-annotations: fls_q8l2jza7d9xa
// Comments
